--- a/lw3/presentation-maker/src/components/MiniatureContainer/MiniatureContainer.module.css
+++ b/lw3/presentation-maker/src/components/MiniatureContainer/MiniatureContainer.module.css
@@ -4,3 +4,19 @@
     flex-direction: column;
     gap: 10px;
 }
+
+.holder {
+    max-width: 200px;
+    min-width: 150px;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    gap: 10px;
+
+    font-family: var(--base-font);
+    color: var(--default-text-color);
+}
+.holder__num {
+    font-family: inherit;
+    color: inherit;
+}
