--- a/lw3/presentation-maker/src/components/Slide/Slide.module.css
+++ b/lw3/presentation-maker/src/components/Slide/Slide.module.css
@@ -2,10 +2,9 @@
     width: 100%;
     height: 100%;
 
-
     border: 2px solid var(--default-border-color);
-    border-radius: 10px;
 }
 
 .wrapper {
+    position: relative;
 }
