feature/toolbar, slide_elements

--- a/lw3/presentation-maker/src/components/Miniature/Miniature.module.css
+++ b/lw3/presentation-maker/src/components/Miniature/Miniature.module.css
@@ -12,3 +12,7 @@
         border-color: var(--accent-border-color);
     }
 }
+
+.slide__wrapper_active {
+    border-color: var(--selected-border-color);
+}
