--- a/lw3/presentation-maker/src/components/SlideElement/SlideElement.module.css
+++ b/lw3/presentation-maker/src/components/SlideElement/SlideElement.module.css
@@ -6,8 +6,11 @@
     border: 1px solid rgba(var(--accent-border-color-rgb), 0.5);
 }
 
+.element_active {
+    border: 2px solid var(--selected-border-color);
+}
+
 .image {
-    /*max-width: 100%;*/
     width: -webkit-fill-available;
     object-fit: cover;
 }
