--- a/lw3/presentation-maker/src/components/Slide/Slide.module.css
+++ b/lw3/presentation-maker/src/components/Slide/Slide.module.css
@@ -1,12 +1,28 @@
-.workspace {
-    width: 100%;
-    height: 100%;
-
-    border: 2px solid var(--default-border-color);
-}
-
-.wrapper {
+.slide {
     position: relative;
 
     overflow: hidden;
+}
+
+.slide_editable {
+    width: 100%;
+    height: 100%;
+}
+
+.slide_preview {
+    min-width: 320px;
+    min-height: 180px;
+
+    border: 2px solid var(--default-border-color);
+    border-radius: 5px;
+
+    transition: border 0.3s ease;
+
+    &:hover {
+        border: 2px solid var(--accent-border-color);
+    }
+}
+
+.slide_active {
+    border-color: var(--selected-border-color);
 }
