--- a/lw3/presentation-maker/src/components/SlideElement/SlideElement.module.css
+++ b/lw3/presentation-maker/src/components/SlideElement/SlideElement.module.css
@@ -10,6 +10,10 @@
     border: 2px solid var(--selected-border-color);
 }
 
+.element_disabled {
+    pointer-events: none;
+}
+
 .image {
     width: -webkit-fill-available;
     object-fit: cover;
