hotfix/lw4_palette&addImage

--- a/presentation-maker/src/index.css
+++ b/presentation-maker/src/index.css
@@ -6,6 +6,7 @@
     --default-bg-color: #ffffff;
     --accent-bg-color: #f0f4f9;
     --accent-bg-color2: #cbcbcb;
+    --modal-overlay-bg: #444746;
 
     /* BORDER */
     --default-border-color: #c4c7c5;
