--- a/presentation-maker/src/components/Toolbar/Toolbar.module.css
+++ b/presentation-maker/src/components/Toolbar/Toolbar.module.css
@@ -57,3 +57,13 @@
 .toolbar__input_expanded {
     max-width: 200px;
 }
+
+.toolbar__colorpicker {
+    position: absolute;
+
+    width: 0;
+    height: 0;
+
+    opacity: 0;
+    pointer-events: none;
+}
