--- a/presentation-maker/src/components/Modal/Modal.module.css
+++ b/presentation-maker/src/components/Modal/Modal.module.css
@@ -15,8 +15,13 @@
     max-width: 90%;
     max-height: 90%;
     display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 20px;
 
     background-color: var(--default-bg-color);
+    border-radius: 10px;
+
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
 }
 
