--- a/presentation-maker/src/components/SlidesList/SlidesList.module.css
+++ b/presentation-maker/src/components/SlidesList/SlidesList.module.css
@@ -1,5 +1,5 @@
 .container {
-    min-width: max-content;
+    min-width: 260px;
     max-height: calc(100vh - 104px);
     display: flex;
     flex-direction: column;
@@ -7,9 +7,6 @@
     padding-right: 10px;
 
     overflow-y: scroll;
-
-    /*scrollbar-width: thin;*/
-    /*scrollbar-color: #888 #f1f1f1;*/
 
     /* Для WebKit */
     &::-webkit-scrollbar {
