--- a/presentation-maker/src/components/IconButton/IconButton.module.css
+++ b/presentation-maker/src/components/IconButton/IconButton.module.css
@@ -16,7 +16,7 @@
     cursor: pointer;
 
     &:hover {
-        background-color: var(--accent-bg-color2);
+        background-color: var(--accent-border-color);
     }
 }
 
@@ -27,6 +27,10 @@
     &:hover {
         background-color: transparent;
     }
+}
+
+.toolbar__item_active {
+    background-color: var(--accent-bg-color2);
 }
 
 .toolbar__hint {
