add/mass_selection, drag&drop

--- a/presentation-maker/src/index.css
+++ b/presentation-maker/src/index.css
@@ -11,7 +11,7 @@
     /* BORDER */
     --default-border-color: #c4c7c5;
     --accent-border-color: #7b7b7b;
-    --selected-border-color: #7ec3e3;
+    --selected-border-color: #53a4ca;
 
     /* TEXT */
     --default-text-color: #444746;
