--- a/presentation-maker/src/components/Toolbar/Toolbar.module.css
+++ b/presentation-maker/src/components/Toolbar/Toolbar.module.css
@@ -1,5 +1,10 @@
 .toolbar {
     display: flex;
+}
+
+.toolbar__wrapper {
+    width: 100%;
+    display: flex;
     align-items: center;
     gap: 5px;
     padding: 15px;
