--- a/presentation-maker/src/index.css
+++ b/presentation-maker/src/index.css
@@ -3,7 +3,7 @@
     --base-font: 'Golos UI', sans-serif;
 
     /* BACKGROUND */
-    --default-bg-color: #ffffff;
+    --default-bg-color: #f9fbfd;
     --accent-bg-color: #f0f4f9;
     --accent-bg-color2: #cbcbcb;
     --modal-overlay-bg: #444746;
