feature/theme_switcher

--- a/presentation-maker/src/components/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/presentation-maker/src/components/ThemeSwitcher/ThemeSwitcher.module.css
@@ -1,5 +1,14 @@
 .themeSwitcher {
+    min-width: 50px;
+    max-height: 30px;
     display: flex;
+    align-items: center;
+    padding: 5px;
+    margin-left: 20px;
 
+    list-style: none;
 
+    li {
+
+    }
 }
