--- a/presentation-maker/src/components/SelectionOverlay/SelectionOverlay.module.css
+++ b/presentation-maker/src/components/SelectionOverlay/SelectionOverlay.module.css
@@ -66,7 +66,7 @@
 
     transform: translate(50%, 50%);
 
-    cursor: nw-resize;
+    cursor: se-resize;
 }
 
 .resizeHandler_botLeft {
@@ -75,7 +75,7 @@
 
     transform: translate(-50%, 50%);
 
-    cursor: ne-resize;
+    cursor: sw-resize;
 }
 
 .resizeHandler_top {
@@ -94,7 +94,7 @@
     transform-origin: center;
     transform: translate(50%, -50%) rotate(90deg);
 
-    cursor: w-resize;
+    cursor: e-resize;
 }
 
 .resizeHandler_bottom {
@@ -103,7 +103,7 @@
 
     transform: translate(-50%, 50%);
 
-    cursor: n-resize;
+    cursor: s-resize;
 }
 
 .resizeHandler_left {
