--- a/presentation-maker/src/components/App/App.module.css
+++ b/presentation-maker/src/components/App/App.module.css
@@ -1,12 +1,14 @@
 .presentation {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 10px;
 
     background-color: var(--default-bg-color);
+
+    transition: background-color 0.3s ease;
 }
 
 .presentation__container {
