feature/theme_switcher_color_schema

--- a/presentation-maker/src/components/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/presentation-maker/src/components/ThemeSwitcher/ThemeSwitcher.module.css
@@ -1,22 +1,29 @@
 .themeSwitcher {
-    min-width: 50px;
-    max-height: 30px;
     display: flex;
     align-items: center;
     padding: 5px;
     margin-left: 20px;
+    
+    border-radius: 50%;
+    background-color: var(--accent-bg-color2);
 
     list-style: none;
+
+    transition: background-color 0.3s ease;
+
+    cursor: pointer;
+
+    &:hover {
+        background-color: var(--accent-border-color);
+    }
 }
 
-/*.theme {*/
-/*    transition: margin 0.3s ease;*/
-/*}*/
+.theme {
+    display: flex;
+}
 
-/*.light {*/
-/*    margin-right: auto;*/
-/*}*/
+.light {
+}
 
-/*.dark {*/
-/*    margin-left: auto;*/
-/*}*/
+.dark {
+}
