--- a/presentation-maker/src/index.css
+++ b/presentation-maker/src/index.css
@@ -28,10 +28,13 @@
   --scroll-thumb-color: #888888;
 
     /* FORM SETTINGS */
+    --form-font: 'Geologica', sans-serif;
     --form-button-bg-default: #fd376e;
 
     --form-button-text-default: #ffeaf0;
     --form-button-text-accent:  var(--form-button-bg-default);
+
+    --form-wrapper-bg-default: #19191c;
 }
 
 /* dark theme */
@@ -80,8 +83,8 @@ ol {
 @font-face {
   font-family: 'Golos UI';
   src:
-    url('./assets/fonts/Golos-UI_Regular.woff2') format('woff2'),
-    url('./assets/fonts/Golos-UI_Regular.ttf') format('truetype');
+    url('./assets/fonts/Golos/Golos-UI_Regular.woff2') format('woff2'),
+    url('./assets/fonts/Golos/Golos-UI_Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -89,8 +92,8 @@ ol {
 @font-face {
   font-family: 'Golos UI';
   src:
-    url('./assets/fonts/Golos-UI_Medium.woff2') format('woff2'),
-    url('./assets/fonts/Golos-UI_Medium.ttf') format('truetype');
+    url('./assets/fonts/Golos/Golos-UI_Medium.woff2') format('woff2'),
+    url('./assets/fonts/Golos/Golos-UI_Medium.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
@@ -98,8 +101,8 @@ ol {
 @font-face {
   font-family: 'Golos UI';
   src:
-    url('./assets/fonts/Golos-UI_Medium.woff2') format('woff2'),
-    url('./assets/fonts/Golos-UI_Medium.ttf') format('truetype');
+    url('./assets/fonts/Golos/Golos-UI_Medium.woff2') format('woff2'),
+    url('./assets/fonts/Golos/Golos-UI_Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
@@ -107,8 +110,44 @@ ol {
 @font-face {
   font-family: 'Golos UI';
   src:
-    url('./assets/fonts/Golos-UI_Bold.woff2') format('woff2'),
-    url('./assets/fonts/Golos-UI_Bold.ttf') format('truetype');
+    url('./assets/fonts/Golos/Golos-UI_Bold.woff2') format('woff2'),
+    url('./assets/fonts/Golos/Golos-UI_Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Geologica';
+  src:
+    url('./assets/fonts/Geologica/Geologica-Regular.woff2') format('woff2'),
+    url('./assets/fonts/Geologica/Geologica-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Geologica';
+  src:
+    url('./assets/fonts/Geologica/Geologica-Medium.woff2') format('woff2'),
+    url('./assets/fonts/Geologica/Geologica-Medium.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Geologica';
+  src:
+    url('./assets/fonts/Geologica/Geologica-Medium.woff2') format('woff2'),
+    url('./assets/fonts/Geologica/Geologica-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Geologica';
+  src:
+    url('./assets/fonts/Geologica/Geologica-Bold.woff2') format('woff2'),
+    url('./assets/fonts/Geologica/Geologica-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
