--- a/presentation-maker/src/components/AppHeader/AppHeader.module.css
+++ b/presentation-maker/src/components/AppHeader/AppHeader.module.css
@@ -1,51 +1,31 @@
-.wrapper {
-    position: absolute;
-    top: 0;
+.logoWrapper {
+    position: relative;
+    z-index: 1;
 
     width: 100%;
-    height: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-
-    font-family: var(--extra-font);
-}
-
-.form {
-    min-width: 300px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 20px;
-}
-
-.formHeading {
-    font-family: var(--extra-font);
-    font-size: 20px;
-    color: var(--default-text-color);
-    text-align: center;
+    padding: 10px;
 
     user-select: none;
+}
+
+.logo {
+    font-family: var(--extra-font);
+    font-size: 24px;
+    line-height: 1;
+    color: var(--default-text-color);
 
     transition: color 0.3s ease;
 }
 
-.formFieldBox {
-
+.handlers {
+    display: flex;
+    align-items: center;
 }
 
-.field {
-    width: 100%;
-    padding: 10px;
-
-    font-family: var(--extra-font);
-
-    border: 1px solid var(--default-border-color);
-    border-radius: 10px;
-}
-
-.submitButton {
+.logout {
     width: 100%;
     display: flex;
     justify-content: center;
