--- a/presentation-maker/src/components/SlideEditor/SlideEditor.module.css
+++ b/presentation-maker/src/components/SlideEditor/SlideEditor.module.css
@@ -1,18 +1,18 @@
 .editor {
-  max-width: 1920px;
-  max-height: 1080px;
-  width: 100vw;
-  height: calc(100vh - 104px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    max-width: 1920px;
+    max-height: calc(100vh - 178px);
+    width: 100vw;
+    /*height: calc(100vh - 104px);*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  border: 1px solid var(--default-border-color);
+    border: 1px solid var(--default-border-color);
 
-  overflow: hidden;
-  user-select: none;
+    overflow: hidden;
+    user-select: none;
 }
 
 .editor__container {
-  max-width: 100%;
+    max-width: 100%;
 }
