--- a/presentation-maker/src/pages/EditorPage/EditorPage.module.css
+++ b/presentation-maker/src/pages/EditorPage/EditorPage.module.css
@@ -1,10 +1,10 @@
 .presentation {
     width: 100%;
-    /*height: 100vh;*/
+    height: calc(100vh - 58px);
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 10px;
+    padding: 0 10px 10px 10px;
 
     background-color: var(--default-bg-color);
 
