--- a/presentation-maker/src/pages/AuthPage/AuthPage.module.css
+++ b/presentation-maker/src/pages/AuthPage/AuthPage.module.css
@@ -16,7 +16,7 @@
     min-width: 300px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 25px;
     padding: 20px;
 }
 
@@ -32,7 +32,7 @@
 }
 
 .formFieldBox {
-
+    position: relative;
 }
 
 .field {
@@ -41,8 +41,14 @@
 
     font-family: var(--extra-font);
 
-    border: 1px solid var(--default-border-color);
+    border: 2px solid var(--default-border-color);
     border-radius: 10px;
+
+    transition: border 0.3s ease;
+
+    &.fieldError {
+        border-color: var(--error-default-color);
+    }
 }
 
 .submitButton {
@@ -73,4 +79,42 @@
         border: 1px solid var(--form-button-bg-default);
         background-color: transparent;
     }
+}
+
+.buttonGroup {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.errorText {
+    position: absolute;
+
+    margin-top: 4px;
+
+    color: var(--error-default-color);
+    font-size: 0.875rem;
+}
+
+.errorPopup {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+
+    padding: 20px;
+
+    background-color: rgba(var(--form-button-bg-default-rgb), 0.7);
+    border-radius: 20px;
+
+    transform: translateX(150%);
+    transition: transform 0.3s ease;
+
+    &.showPopup {
+        transform: translateX(0);
+    }
+}
+
+.errorPopupMessage {
+
 }
