feat/handle_delete

--- a/presentation-maker/src/components/SlideContent/SlideContent.module.css
+++ b/presentation-maker/src/components/SlideContent/SlideContent.module.css
@@ -22,3 +22,8 @@
 .slide_editable {
     border: 1px solid var(--default-border-color);
 }
+
+.slide_reset {
+    border-radius: 0 !important;
+    border: none !important;
+}
