feat/preview_page

--- a/presentation-maker/src/index.css
+++ b/presentation-maker/src/index.css
@@ -9,6 +9,7 @@
     --accent-bg-color: #f0f4f9;
     --accent-bg-color2: #cbcbcb;
     --modal-overlay-bg: #444746;
+    --viewer-overlay-bg: #000000;
 
     /* BORDER */
     --default-border-color: #c4c7c5;
