--- a/presentation-maker/src/pages/ViewPage/ViewPage.module.css
+++ b/presentation-maker/src/pages/ViewPage/ViewPage.module.css
@@ -1,17 +1,128 @@
 .container {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+
+    width: 100%;
+    height: calc(100% - 66px);;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #000000;
+
+    overflow: hidden;
+}
+
+.slider {
+    position: relative;
 
     width: 100%;
     height: 100%;
-
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.notFound {
-    font-family: var(--base-font);
-    color: var(--default-text-color);
+.slide {
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    opacity: 1;
+    transition: opacity 0.3s ease;
+}
+
+.slideEntering {
+    opacity: 0;
+}
+
+.handlers {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    z-index: 10;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+
+    transform: translateX(-50%);
+}
+
+.indicator {
+    font-size: 14px;
+    color: #fbfcfd;
+}
+
+.navBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+
+    color: #fbfcfd;
+
+    background-color: rgba(0, 0, 0, 0.3);
+    border: none;
+    border-radius: 50%;
+
+    cursor: pointer;
+
+    transition: background-color 0.3s ease;
+
+    &:hover {
+        background-color: rgba(0, 0, 0);
+    }
+}
+
+.navBtnDisabled {
+    background-color: rgba(0, 0, 0, 0.1);
+
+    cursor: default;
+
+    &:hover {
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+}
+
+.error {
+    color: white;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.closeBtn {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+
+    background-color: rgba(0, 0, 0, 0.3);
+    border: none;
+    border-radius: 50%;
+
+    transition: background-color 0.3s ease;
+
+    cursor: pointer;
+
+    &:hover {
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+}
+
+.hiddenHandler {
+    transform: translate(0);
 }
