feat/font_tools

--- a/presentation-maker/src/index.css
+++ b/presentation-maker/src/index.css
@@ -18,6 +18,7 @@
 
     /* TEXT */
     --default-text-color: #444746;
+    --accent-text-color: #fbfcfd;
 
     /* RGB */
     --accent-border-color-rgb: 123, 123, 123;
@@ -63,6 +64,7 @@
 
     /* TEXT */
     --default-text-color: #fbfcfd;
+    --accent-text-color: #444746;
 
     /* RGB (для прозрачности и градиентов) */
     --accent-border-color-rgb: 161, 161, 161;
