feat/font_tools

--- a/presentation-maker/src/pages/NotFound/NotFound.module.css
+++ b/presentation-maker/src/pages/NotFound/NotFound.module.css
@@ -11,6 +11,12 @@
     align-items: center;
 }
 
+.back {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
 .notFound {
     font-family: var(--base-font);
     color: var(--default-text-color);
