--- a/presentation-maker/src/components/AddBgDialog/AddBgDialog.module.css
+++ b/presentation-maker/src/components/AddBgDialog/AddBgDialog.module.css
@@ -1,33 +1,84 @@
 .holder {
-  min-width: 400px;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+    min-width: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .holder_image {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .field {
-  padding: 5px;
+    width: 100%;
+    padding: 5px;
 
-  font-family: var(--base-font);
+    font-family: var(--base-font);
 
-  border: 1px solid var(--default-border-color);
+    border: 1px solid var(--default-border-color);
 }
 
 .holder__btns {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
 .tabs {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  gap: 10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.holder_file {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.fileInput {
+    display: none;
+}
+
+.customUploadBtn {
+    width: 100%;
+    min-height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+
+    font-family: var(--base-font);
+    font-weight: 600;
+    color: var(--default-text-color);
+    line-height: 1.5;
+
+    border: 1px solid var(--default-border-color);
+    border-radius: 5px;
+    background-color: transparent;
+
+    cursor: pointer;
+
+    transition: color 0.3s ease,
+    background-color 0.3s ease;
+
+    &:hover {
+        color: var(--accent-text-color);
+
+        background-color: var(--accent-bg-color);
+    }
+}
+
+.preview {
+    width: 100%;
+    display: flex;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
