--- a/presentation-maker/src/components/SlidesList/SlidesList.module.css
+++ b/presentation-maker/src/components/SlidesList/SlidesList.module.css
@@ -1,44 +1,100 @@
 .container {
-  min-width: 260px;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding-right: 10px;
+    min-width: 260px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-right: 10px;
 
-  overflow-y: scroll;
+    overflow-y: scroll;
 
-  /* Для WebKit */
-  &::-webkit-scrollbar {
-    width: 8px;
-    scroll-behavior: smooth;
-  }
-  &::-webkit-scrollbar-track {
-    background: var(--scroll-track-color);
-  }
-  &::-webkit-scrollbar-thumb {
-    background: var(--scroll-thumb-color);
-    border-radius: 6px;
-  }
+    /* Для WebKit */
+
+    &::-webkit-scrollbar {
+        width: 8px;
+        scroll-behavior: smooth;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: var(--scroll-track-color);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: var(--scroll-thumb-color);
+        border-radius: 6px;
+    }
+}
+
+.frame {
+    width: 240px;
+    display: flex;
+    gap: 10px;
+
+    font-family: var(--base-font);
+    color: var(--default-text-color);
+
+    user-select: none;
 }
 
 .holder {
-  width: 240px;
-  display: flex;
-  gap: 10px;
+    position: relative;
 
-  font-family: var(--base-font);
-  color: var(--default-text-color);
+    width: 240px;
+    display: flex;
+    gap: 10px;
 
-  user-select: none;
+    font-family: var(--base-font);
+    color: var(--default-text-color);
+
+    user-select: none;
+}
+
+.holder_dragged {
+    opacity: 0.4;
+}
+
+.holder_drop_before {
+    &:before {
+        content: "";
+        position: absolute;
+        top: 3px;
+        left: 3px;
+        z-index: 1;
+
+        width: calc(100% - 6px);
+        height: calc(50% - 3px);
+
+        border-radius: 1px 1px 0 0;
+        background-color: var(--modal-overlay-bg);
+
+        opacity: 0.4;
+    }
+}
+
+.holder_drop_after {
+    &:after {
+        content: "";
+        position: absolute;
+        bottom: 3px;
+        left: 3px;
+        z-index: 1;
+
+        width: calc(100% - 6px);
+        height: calc(50% - 3px);
+
+        border-radius: 0 0 1px 1px;
+        background-color: var(--modal-overlay-bg);
+
+        opacity: 0.4;
+    }
 }
 
 .holder__num {
-  font-family: inherit;
-  color: inherit;
+    font-family: inherit;
+    color: inherit;
 }
 
 .dragging {
-  opacity: 0.5;
-  scale: 0.8;
+    opacity: 0.5;
+    scale: 0.8;
 }
