--- a/presentation-maker/src/components/SlidesList/SlidesList.module.css
+++ b/presentation-maker/src/components/SlidesList/SlidesList.module.css
@@ -26,7 +26,7 @@
 }
 
 .frame {
-    width: 240px;
+    min-width: 320px;
     display: flex;
     gap: 10px;
 
@@ -39,7 +39,8 @@
 .holder {
     position: relative;
 
-    width: 240px;
+    width: calc(1240px / 5);
+    height: calc(720px / 5);
     display: flex;
     gap: 10px;
 
