--- a/presentation-maker/src/components/SlideContent/SlideContent.module.css
+++ b/presentation-maker/src/components/SlideContent/SlideContent.module.css
@@ -1,13 +1,13 @@
 .slide {
     position: relative;
 
-    width: 100%;
-    height: 100%;
-
     overflow: hidden;
 }
 
 .slide_preview {
+    width: 240px;
+    height: 135px;
+
     border: 3px solid var(--default-border-color);
     border-radius: 5px;
 
