--- a/presentation-maker/src/components/SlideEditor/SlideEditor.module.css
+++ b/presentation-maker/src/components/SlideEditor/SlideEditor.module.css
@@ -1,7 +1,8 @@
 .editor {
     max-width: 1920px;
     width: 100vw;
-    height: 100%;
+    /*height: 100%;*/
+    /*height: 100vh;*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,5 +14,10 @@
 }
 
 .editor__container {
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
 }
