--- a/presentation-maker/src/components/SlidesList/SlidesList.module.css
+++ b/presentation-maker/src/components/SlidesList/SlidesList.module.css
@@ -1,5 +1,5 @@
 .container {
-    min-width: 260px;
+    min-width: 280px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -40,6 +40,7 @@
     position: relative;
 
     width: 240px;
+    height: 135px;
     display: flex;
     gap: 10px;
 
