--- a/presentation-maker/src/components/SlideEditor/SlideEditor.module.css
+++ b/presentation-maker/src/components/SlideEditor/SlideEditor.module.css
@@ -14,8 +14,8 @@
 }
 
 .editor__container {
-    width: 100%;
-    height: 100%;
+    /*width: 100%;*/
+    /*height: 100%;*/
     display: flex;
     justify-content: center;
     align-items: center;
