--- a/presentation-maker/src/components/SlideContent/SlideContent.module.css
+++ b/presentation-maker/src/components/SlideContent/SlideContent.module.css
@@ -5,8 +5,9 @@
 }
 
 .slide_preview {
-    width: 240px;
-    height: 135px;
+    width: 100%;
+    /*width: 240px;*/
+    /*height: 135px;*/
 
     border: 3px solid var(--default-border-color);
     border-radius: 5px;
