--- a/presentation-maker/src/components/SlideEditor/SlideEditor.module.css
+++ b/presentation-maker/src/components/SlideEditor/SlideEditor.module.css
@@ -1,7 +1,8 @@
 .editor {
-    max-width: 1920px;
-    width: 100vw;
-    /*height: 100%;*/
+    /*max-width: 1920px;*/
+    /*width: 100vw;*/
+    width: 100%;
+    height: 100%;
     /*height: 100vh;*/
     display: flex;
     justify-content: center;
@@ -20,4 +21,6 @@
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+
+    aspect-ratio: 16 / 9;
 }
