--- a/presentation-maker/src/pages/ViewPage/ViewPage.module.css
+++ b/presentation-maker/src/pages/ViewPage/ViewPage.module.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: #000000;
+    background-color: var(--accent-bg-color);
 
     overflow: hidden;
 }
@@ -25,8 +25,8 @@
 .slide {
     position: absolute;
 
-    width: 100%;
-    height: 100%;
+    /*width: 100%;*/
+    /*height: 100%;*/
     display: flex;
     justify-content: center;
     align-items: center;
