--- a/presentation-maker/src/components/SlideContent/SlideContent.module.css
+++ b/presentation-maker/src/components/SlideContent/SlideContent.module.css
@@ -2,25 +2,24 @@
     position: relative;
 
     overflow: hidden;
+    user-select: none;
 }
 
 .slide_preview {
     width: 100%;
-    /*width: 240px;*/
-    /*height: 135px;*/
 
-    border: 3px solid var(--default-border-color);
-    border-radius: 5px;
+    /*border: 3px solid var(--default-border-color);*/
+    /*border-radius: 5px;*/
 
     transition: border 0.3s ease;
 
-    &:hover {
-        border: 3px solid var(--accent-border-color);
-    }
+    /*&:hover {*/
+    /*    border: 3px solid var(--accent-border-color);*/
+    /*}*/
 }
 
 .slide_active {
-    border-color: var(--selected-border-color);
+    /*border-color: var(--selected-border-color);*/
 }
 
 .slide_editable {
